Install json-server

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependencies": {},
+    "dependencies": {
+        "json-server": "^0.15.1"
+    },
     "devDependencies": {
         "autoprefixer-cli": "^1.0.0",
         "browser-sync": "^2.26.3",
@@ -43,5 +45,4 @@
         "stylelint": "^9.10.1",
         "stylelint-scss": "^3.5.4"
     }
-    
 }
