Add date picker

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "json-server": "^0.15.1"
+        "flatpickr": "^4.6.3",
+        "json-server": "^0.15.1",
+        "rangeslider-pure": "^0.4.11"
     },
     "devDependencies": {
         "autoprefixer-cli": "^1.0.0",
