Add tables booked

--- a/src/db/app.json
+++ b/src/db/app.json
@@ -6,9 +6,7 @@
       "name": "Zio Stefano's Doughnut",
       "price": 9,
       "description": "Treat yourself with this soft, freshly baked cookie. The recipe has been handed down from generation to generation in our family and it has won us several first place prizes in local competitions.",
-      "images": [
-        "<img class=\"active\" src=\"images/doughnut.svg\">"
-      ]
+      "images": ["<img class=\"active\" src=\"images/doughnut.svg\">"]
     },
     {
       "id": "breakfast",
@@ -16,9 +14,7 @@
       "name": "Zia Giulia's Breakfast",
       "price": 9,
       "description": "There's no better way to start your day than indulging yourself with a cup of fresh Italian coffee and crispy waffels. Made just for you on the spot, this breakfast combo has been our guests' favorite for over 50 years.",
-      "images": [
-        "<img class=\"active\" src=\"images/breakfast.svg\">"
-      ],
+      "images": ["<img class=\"active\" src=\"images/breakfast.svg\">"],
       "params": {
         "coffee": {
           "label": "Coffee type",
@@ -206,8 +202,8 @@
   "event": [
     {
       "id": 1,
-      "date": "2019-01-01",
-      "hour": "12:30",
+      "date": "2019-26-10",
+      "hour": "15:00",
       "table": 1,
       "repeat": false,
       "duration": 4,
@@ -216,7 +212,7 @@
     },
     {
       "id": 2,
-      "date": "2019-01-01",
+      "date": "2019-11-01",
       "hour": "16:00",
       "table": 3,
       "repeat": "daily",
@@ -226,7 +222,7 @@
     },
     {
       "id": 3,
-      "date": "2019-01-01",
+      "date": "2019-11-01",
       "hour": "12:00",
       "table": 3,
       "repeat": "daily",
@@ -258,9 +254,9 @@
   "booking": [
     {
       "id": 1,
-      "date": "2019-10-21",
+      "date": "2019-10-26",
       "hour": "16:00",
-      "table": 1,
+      "table": 2,
       "duration": 3,
       "ppl": 4,
       "starters": ["water"]
